fix: dark mode config

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -57,11 +57,11 @@
   }
 }
 
-@layer base {
+/* @layer base {
   * {
     @apply border-border;
   }
   body {
     @apply bg-background text-foreground;
   }
-}
+} */
